<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="editTextColour"></string>
    <string name="buttonAddItem">ADD NEW COLOUR</string>
    <string name="listviewcolour">listViewColour</string>
    <string name="etIndexElement"></string>
    <string name="ButtonRemove">REMOVE A COLOUR</string>
    <string name="ButtonUpdate">UPDATE A COLOUR</string>
</resources>