<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextColour" />

    <EditText
        android:id="@+id/etIndexElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etIndexElement" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddItem"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddItem" />

        <Button
            android:id="@+id/ButtonRemove"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ButtonRemove" />

        <Button
            android:id="@+id/ButtonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ButtonUpdate" />
    </LinearLayout>

    <ListView
        android:id="@+id/listviewcolour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>